--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,11 @@
+@import "./vars/colors";
+@import "./blocks/navegacao-superior";
+@import "./blocks/cabecalho";
+@import "./blocks/navegacao-lateral";
+@import "./blocks/visao-geral";
+@import "./blocks/rodape";
+
+
 body{
   font-family: Helvetica ,Arial, sans-serif;
   .logo{
@@ -5,187 +13,13 @@ body{
   }
 }
 
-.navegacao-superior{
-  background-color: #000;
-  align-items: center;
-  color: #fff;
-  .nav-link {
-    color: #fff;
-    .icone-usuario-pequeno{
-      background-color: white; 
-      border-radius: 50%;
-    }
-    :hover{
-      color: #1ed760;
-    }
-  }
-}
-
 .fundo{
-  background-image: linear-gradient(#212c39, #121e3d 50% , #000);
+  background-image: $gradient-fundo;
 }
 
-.cabecalho{
-  background-color: #ff4632;
-  padding: 20px;
-  h1{
-    padding: 20 0;
-    font-weight: 1000;
-    font-size: 3rem;
-    height: 150px;
-  }
-  h3{
-    height: 100px;
-    padding: 50 0;
-    font-size: 1.5rem;
-    font-weight: 600;
-  }
-  .btn-primary{
-    border-radius: 30px;
-    font-size: 0.8rem;
-    letter-spacing: 2px;
-    color: #fff;
-    background-color: #000;
-    border: none;
-    font-weight: 600;
-    line-height: 30px;
-    width: 300px;
-   
-  }
-  p{
-    margin-top: 30px;
-    font-size: 0.8rem;
-    height: 50px;
-    a{
-      color:#000;
-    }
-  }
+.utilitario{
+  background-color: $forte-inverse-fundo;
 }
 
-.navegacao-lateral{
-  background-color: #1b1b1b;
-  .foto{
-    width: 90px;
-    margin-left: 80px;
-  } 
-  ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    li{
-      padding: 10px;
-      border-bottom: 1px solid #161616;
-      border-top: 1px solid #272727; 
-      a{
-        text-decoration: none;
-        color: #919482;
-        padding: 10px;
-      }
-    }
-  }
-  
-}
 
-.visao-geral{
-  background-color: #fff;
-  h1{
-    font-weight: 1000;
-    height: 80px;
-  }
-  h3{
-    font-weight: 600;
-    font-size: 1.5rem;
-    height: 50px;
-    margin-top: 30px;
-  }
-  .linha p{
-    border-bottom: 1px solid #eeeeee;
-  }
-  .informacoes{
-    color: #9e9e9e;
-    height: 50px;
-  }  
-  .btn-primary{
-    background-color: #fff;
-    color: #757575;
-    font-size: 0.8rem;
-    letter-spacing: 2px;
-    border-radius: 30px;
-    border: 2px solid #757575;
-    align-items: center;
-    line-height: 30px;
-    width: 200px;
-  }
-  .banner-roxo{
-    height: 230px;
-    padding-left: 20px;
-    display: flex;
-    align-items: center;
-    background:rgba(0, 0, 0, 0) linear-gradient(-180deg, rgb(182, 43, 190) 0%, rgb(150, 34, 185) 100%) repeat scroll 0% 0%;
-    color: #fff;
-  }
-  .bloco-free{
-    height: 150px;    
-    border: 1px solid #eeeeee;
-    padding-left: 20px;
-    margin-bottom: 30px;
-    p{
-      border-bottom: 1px solid #eeeeee;
-      height: 50px;
-      padding-top: 20px;
-    }
-  }
-  .aviso{
-    border: 1px solid #d9dadc;
-    background-color: #f8f8f8;
-    padding: 20px;
-  }
-  .grande{
-    width: 350px;
-  }
-}
 
-.rodape{
-  background-color: #000; 
-  height: 400px;
-  color: #fff;
-  h6{
-    font-size: 0.7rem;
-    font-weight: 600;
-    letter-spacing: 2px;
-    color: #879496;
-  }
-  ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    a{
-      text-decoration: none;
-      color: #fff;
-      margin-top: 10px;
-      font-size: 0.8rem;
-    }
-    :hover{
-      color: #1ed760;
-    }
-  }
-  .brasil{
-    margin-top: 100px;
-    font-size: 0.8rem;
-  }
-  .footers{
-    font-size: 0.8rem;
-    a{
-      text-decoration: none;
-      color: #879496;
-      padding-right: 20px;
-    }
-    :hover{ 
-      color: #1ed760;
-    }
-    .copyright{
-      position: relative;
-      left: 50px;
-    }
-  }
-}
