--- a/css/style.css
+++ b/css/style.css
@@ -73,9 +73,6 @@
   padding: 10px;
 }
 
-.visao-geral {
-  background-color: #fff;
-}
 .visao-geral h1 {
   font-weight: 1000;
   height: 80px;
@@ -130,6 +127,24 @@
 }
 .visao-geral .grande {
   width: 350px;
+}
+
+.editar-perfil {
+  font-size: 0.8rem;
+}
+.editar-perfil a {
+  letter-spacing: 2px;
+  font-size: 0.8rem;
+  color: #7f7f7f;
+  font-weight: 600;
+}
+.editar-perfil a:hover {
+  color: #000;
+}
+.editar-perfil a.btn-primary {
+  color: #fff;
+  background-color: #1ed760;
+  border: none;
 }
 
 .rodape {
