--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,7 +8,7 @@
 
 
 body{
-  font-family: Helvetica ,Arial, sans-serif;
+  font-family: Helvetica ,Arial , sans-serif;
   .logo{
     width: 120px;
   }
@@ -20,6 +20,9 @@ body{
 
 .utilitario{
   background-color: $forte-inverse-fundo;
+  h2 {
+    font-size: 2.6rem;
+  }
 }
 
 
