--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,23 +14,23 @@
   color: #1ed760;
 }
 
-.cabecalho {
+.heading {
   background-color: #ff4632;
   padding: 20px;
 }
-.cabecalho h1 {
+.heading h1 {
   padding: 20 0;
   font-weight: 1000;
   font-size: 3rem;
   height: 150px;
 }
-.cabecalho h3 {
+.heading h3 {
   height: 100px;
   padding: 50 0;
   font-size: 1.5rem;
   font-weight: 600;
 }
-.cabecalho .btn-primary {
+.heading .btn-primary {
   border-radius: 30px;
   font-size: 0.8rem;
   letter-spacing: 2px;
@@ -41,12 +41,12 @@
   line-height: 30px;
   width: 300px;
 }
-.cabecalho p {
+.heading p {
   margin-top: 30px;
   font-size: 0.8rem;
   height: 50px;
 }
-.cabecalho p a {
+.heading p a {
   color: #000;
 }
 
