--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 @import "./vars/colors";
 @import "./blocks/navegacao-superior";
-@import "./blocks/cabecalho";
+@import "./blocks/heading";
 @import "./blocks/navegacao-lateral";
 @import "./blocks/visao-geral";
 @import "./blocks/editar-perfil";
@@ -8,7 +8,7 @@
 
 
 body{
-  font-family: Helvetica ,Arial , sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   .logo{
     width: 120px;
   }
