--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 @import "./vars/colors";
 @import "./blocks/navegacao-superior";
-@import "./blocks/heading";
+@import "./divs/heading";
 @import "./blocks/navegacao-lateral";
 @import "./blocks/visao-geral";
 @import "./blocks/editar-perfil";
@@ -22,6 +22,34 @@ body{
   background-color: $forte-inverse-fundo;
   h2 {
     font-size: 2.6rem;
+  }
+}
+
+.btn-primary, .bnt-inverter, .btn-banner{
+  font-size: 0.8rem;
+  letter-spacing: 2px;
+  color: $forte-inverse-cor;
+  background-color: #cb1582;
+  border: none;
+  font-weight: 600;
+  &:hover{
+    background-color: $forte-inverse-fundo;
+    color: #000;
+  }
+  &.btn-inverter{
+    background-color: #a5ffef;
+    color: #cb1582;
+    &:hover{
+    background-color: $forte-inverse-fundo;
+    color: #cb1582;
+    } 
+  }
+  &.btn-banner{
+    background-color: #1ed760;
+    color: #2d46b9;
+    &:hover{
+      background-color: $forte-inverse-fundo;
+    }
   }
 }
 
