--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,14 +129,6 @@
 .editar-perfil a:hover {
   color: #000;
 }
-.editar-perfil .btn-primary {
-  font-size: 0.8rem;
-  letter-spacing: 2px;
-  font-weight: 600;
-  color: #fff;
-  background-color: #1ed760;
-  border: none;
-}
 
 .rodape {
   background-color: #000;
@@ -201,7 +193,7 @@ body .logo {
   font-size: 2.6rem;
 }
 
-.btn-primary, .bnt-inverter, .btn-banner {
+.btn-primary, .bnt-inverter, .btn-banner, .btn-submit {
   font-size: 0.8rem;
   letter-spacing: 2px;
   color: #fff;
@@ -209,24 +201,34 @@ body .logo {
   border: none;
   font-weight: 600;
 }
-.btn-primary:hover, .bnt-inverter:hover, .btn-banner:hover {
+.btn-primary:hover, .bnt-inverter:hover, .btn-banner:hover, .btn-submit:hover {
   background-color: #fff;
   color: #000;
 }
-.btn-primary.btn-inverter, .bnt-inverter.btn-inverter, .btn-banner.btn-inverter {
+.btn-primary.btn-inverter, .bnt-inverter.btn-inverter, .btn-banner.btn-inverter, .btn-submit.btn-inverter {
   background-color: #a5ffef;
   color: #cb1582;
 }
-.btn-primary.btn-inverter:hover, .bnt-inverter.btn-inverter:hover, .btn-banner.btn-inverter:hover {
+.btn-primary.btn-inverter:hover, .bnt-inverter.btn-inverter:hover, .btn-banner.btn-inverter:hover, .btn-submit.btn-inverter:hover {
   background-color: #fff;
   color: #cb1582;
 }
-.btn-primary.btn-banner, .bnt-inverter.btn-banner, .btn-banner.btn-banner {
+.btn-primary.btn-banner, .bnt-inverter.btn-banner, .btn-banner.btn-banner, .btn-submit.btn-banner {
   background-color: #1ed760;
   color: #2d46b9;
 }
-.btn-primary.btn-banner:hover, .bnt-inverter.btn-banner:hover, .btn-banner.btn-banner:hover {
+.btn-primary.btn-banner:hover, .bnt-inverter.btn-banner:hover, .btn-banner.btn-banner:hover, .btn-submit.btn-banner:hover {
   background-color: #fff;
+}
+.btn-primary.btn-submit, .bnt-inverter.btn-submit, .btn-banner.btn-submit, .btn-submit.btn-submit {
+  background-color: #1ed760;
+  color: #fff;
+  border: 1px solid #1ed760;
+}
+.btn-primary.btn-submit:hover, .bnt-inverter.btn-submit:hover, .btn-banner.btn-submit:hover, .btn-submit.btn-submit:hover {
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #000;
 }
 
 /*# sourceMappingURL=style.css.map */
