--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,63 @@
+.btn-primary, .btn-inverter, .btn-banner, .btn-submit, .btn-destaque {
+  font-size: 0.8rem;
+  letter-spacing: 2px;
+  color: #fff;
+  background-color: #cb1582;
+  border: none;
+  font-weight: 600;
+}
+.btn-primary:hover, .btn-inverter:hover, .btn-banner:hover, .btn-submit:hover, .btn-destaque:hover {
+  background-color: #fff;
+  color: #000;
+}
+.btn-primary.btn-inverter, .btn-inverter.btn-inverter, .btn-banner.btn-inverter, .btn-submit.btn-inverter, .btn-destaque.btn-inverter {
+  background-color: #a5ffef;
+  color: #cb1582;
+}
+.btn-primary.btn-inverter:hover, .btn-inverter.btn-inverter:hover, .btn-banner.btn-inverter:hover, .btn-submit.btn-inverter:hover, .btn-destaque.btn-inverter:hover {
+  background-color: #fff;
+  color: #cb1582;
+}
+.btn-primary.btn-banner, .btn-inverter.btn-banner, .btn-banner.btn-banner, .btn-submit.btn-banner, .btn-destaque.btn-banner {
+  background-color: #1ed760;
+  color: #2d46b9;
+}
+.btn-primary.btn-banner:hover, .btn-inverter.btn-banner:hover, .btn-banner.btn-banner:hover, .btn-submit.btn-banner:hover, .btn-destaque.btn-banner:hover {
+  background-color: #fff;
+}
+.btn-primary.btn-submit, .btn-inverter.btn-submit, .btn-banner.btn-submit, .btn-submit.btn-submit, .btn-destaque.btn-submit {
+  background-color: #1ed760;
+  color: #fff;
+  border: 1px solid #1ed760;
+}
+.btn-primary.btn-submit:hover, .btn-inverter.btn-submit:hover, .btn-banner.btn-submit:hover, .btn-submit.btn-submit:hover, .btn-destaque.btn-submit:hover {
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #000;
+}
+.btn-primary.btn-destaque, .btn-inverter.btn-destaque, .btn-banner.btn-destaque, .btn-submit.btn-destaque, .btn-destaque.btn-destaque {
+  background-color: #fff;
+  color: #757575;
+  border: 2px solid #757575;
+}
+.btn-primary.btn-destaque:hover, .btn-inverter.btn-destaque:hover, .btn-banner.btn-destaque:hover, .btn-submit.btn-destaque:hover, .btn-destaque.btn-destaque:hover {
+  color: #000;
+  border: 2px solid #000;
+}
+
+.editar-perfil {
+  font-size: 0.8rem;
+}
+.editar-perfil a {
+  letter-spacing: 2px;
+  font-size: 0.8rem;
+  color: #7f7f7f;
+  font-weight: 600;
+}
+.editar-perfil a:hover {
+  color: #000;
+}
+
 .navegacao-superior {
   background-color: #000;
   align-items: center;
@@ -11,46 +71,6 @@
   border-radius: 50%;
 }
 .navegacao-superior .nav-link :hover {
-  color: #1ed760;
-}
-
-.heading, .inverter {
-  background-color: #a5ffef;
-  color: #cb1582;
-}
-.heading h1, .inverter h1 {
-  font-weight: 600;
-  font-size: 3.7rem;
-  height: 150px;
-}
-.heading h4, .inverter h4 {
-  font-size: 0.8rem;
-  font-weight: 600;
-  letter-spacing: 1px;
-}
-.heading h6, .inverter h6 {
-  font-weight: 500;
-  letter-spacing: 1px;
-}
-.heading p, .inverter p {
-  margin-top: 30px;
-  font-size: 0.8rem;
-  height: 50px;
-}
-.heading p a, .inverter p a {
-  color: #cb1582;
-}
-.heading.inverter, .inverter.inverter {
-  background-color: #cb1582;
-  color: #a5ffef;
-}
-.heading.inverter h2, .inverter.inverter h2 {
-  font-size: 4rem;
-  font-weight: 800;
-}
-.heading.banner, .inverter.banner {
-  background: url("../../imagens/fundo.png") no-repeat;
-  height: 599px;
   color: #1ed760;
 }
 
@@ -87,11 +107,6 @@
   height: 50px;
   margin-top: 30px;
 }
-.visao-geral .btn-primary {
-  background-color: #fff;
-  color: #757575;
-  border: 2px solid #757575;
-}
 .visao-geral .banner-roxo {
   height: 230px;
   padding-left: 20px;
@@ -115,19 +130,6 @@
   border: 1px solid #d9dadc;
   background-color: #f8f8f8;
   padding: 20px;
-}
-
-.editar-perfil {
-  font-size: 0.8rem;
-}
-.editar-perfil a {
-  letter-spacing: 2px;
-  font-size: 0.8rem;
-  color: #7f7f7f;
-  font-weight: 600;
-}
-.editar-perfil a:hover {
-  color: #000;
 }
 
 .rodape {
@@ -175,6 +177,46 @@
   left: 50px;
 }
 
+.heading, .inverter {
+  background-color: #a5ffef;
+  color: #cb1582;
+}
+.heading h1, .inverter h1 {
+  font-weight: 600;
+  font-size: 3.7rem;
+  height: 150px;
+}
+.heading h4, .inverter h4 {
+  font-size: 0.8rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+.heading h6, .inverter h6 {
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+.heading p, .inverter p {
+  margin-top: 30px;
+  font-size: 0.8rem;
+  height: 50px;
+}
+.heading p a, .inverter p a {
+  color: #cb1582;
+}
+.heading.inverter, .inverter.inverter {
+  background-color: #cb1582;
+  color: #a5ffef;
+}
+.heading.inverter h2, .inverter.inverter h2 {
+  font-size: 4rem;
+  font-weight: 800;
+}
+.heading.banner, .inverter.banner {
+  background: url("../../imagens/fundo.png") no-repeat;
+  height: 599px;
+  color: #1ed760;
+}
+
 body {
   font-family: Helvetica, Arial, sans-serif;
 }
@@ -191,44 +233,6 @@ body .logo {
 }
 .utilitario h2 {
   font-size: 2.6rem;
-}
-
-.btn-primary, .bnt-inverter, .btn-banner, .btn-submit {
-  font-size: 0.8rem;
-  letter-spacing: 2px;
-  color: #fff;
-  background-color: #cb1582;
-  border: none;
-  font-weight: 600;
-}
-.btn-primary:hover, .bnt-inverter:hover, .btn-banner:hover, .btn-submit:hover {
-  background-color: #fff;
-  color: #000;
-}
-.btn-primary.btn-inverter, .bnt-inverter.btn-inverter, .btn-banner.btn-inverter, .btn-submit.btn-inverter {
-  background-color: #a5ffef;
-  color: #cb1582;
-}
-.btn-primary.btn-inverter:hover, .bnt-inverter.btn-inverter:hover, .btn-banner.btn-inverter:hover, .btn-submit.btn-inverter:hover {
-  background-color: #fff;
-  color: #cb1582;
-}
-.btn-primary.btn-banner, .bnt-inverter.btn-banner, .btn-banner.btn-banner, .btn-submit.btn-banner {
-  background-color: #1ed760;
-  color: #2d46b9;
-}
-.btn-primary.btn-banner:hover, .bnt-inverter.btn-banner:hover, .btn-banner.btn-banner:hover, .btn-submit.btn-banner:hover {
-  background-color: #fff;
-}
-.btn-primary.btn-submit, .bnt-inverter.btn-submit, .btn-banner.btn-submit, .btn-submit.btn-submit {
-  background-color: #1ed760;
-  color: #fff;
-  border: 1px solid #1ed760;
-}
-.btn-primary.btn-submit:hover, .bnt-inverter.btn-submit:hover, .btn-banner.btn-submit:hover, .btn-submit.btn-submit:hover {
-  background-color: #fff;
-  color: #000;
-  border: 1px solid #000;
 }
 
 /*# sourceMappingURL=style.css.map */
