--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,7 +18,7 @@ body{
   background-image: $gradient-fundo;
 }
 
-.utilitario{
+.titulo-perfil{
   background-color: $forte-inverse-fundo;
   h2 {
     font-size: 2.6rem;
