--- a/sass/blocks/_anchor.scss
+++ b/sass/blocks/_anchor.scss
@@ -1,7 +1,6 @@
 @import "../vars/colors.scss";
 
-.editar-perfil{
-  font-size: 0.8rem;
+.anchor{
   a{
     letter-spacing: 2px;
     font-size: 0.8rem;
