--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
+@import "./blocks/anchor";
 @import "./blocks/botoes";
-@import "./blocks/editar-perfil";
 @import "./blocks/navegacao-superior";
 @import "./blocks/navegacao-lateral";
 @import "./blocks/visao-geral";
